objects/Knowledge_Articles__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Knowledge Articles for use be the Service Center</description>
    <fields>
        <fullName>Attachment_Last_Modified_Date__c</fullName>
        <label>Attachment Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attachment_Version_Number__c</fullName>
        <label>Attachment Version Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment__c</fullName>
        <label>Attachment</label>
        <type>File</type>
    </fields>
    <label>Knowledge Article</label>
    <listViews>
        <fullName>archived_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>3</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Archived Articles</label>
    </listViews>
    <listViews>
        <fullName>draft_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Draft Articles</label>
    </listViews>
    <listViews>
        <fullName>published_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Published Articles</label>
    </listViews>
    <pluralLabel>Knowledge Articles</pluralLabel>
</CustomObject>